--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,13 @@ language: android
 dist: trusty
 android:
     components:
-        - build-tools-29.0.2
-
+        - tools
+        - platform-tools
+        #- build-tools-29.0.2
+        #- android-28
+                
 before_install:
     - chmod +x gradlew
+
+script:
+    - ./gradlew build connectedCheck --stacktrace
