--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ android:
     components:
         - tools
         - platform-tools
-        #- build-tools-29.0.2
-        #- android-28
+        - build-tools-29.0.2
+        - android-27
                 
 before_install:
+    - yes | sdkmanager "platforms;android-27"
     - chmod +x gradlew
 
 script:
