--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ android:
     components:
         - tools
         - platform-tools
-        - build-tools-29.0.2
-        - android-27
+        - tools
                 
 before_install:
-    - yes | sdkmanager "platforms;android-27"
-    - chmod +x gradlew
-
+  - touch $HOME/.android/repositories.cfg
+  - yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "build-tools;28.0"
+  
 script:
     - ./gradlew build connectedCheck --stacktrace
